# collo

./: .gitignore  CMakeLists.txt  README.md
astro/: base.hpp  kepler.hpp
cmake/: ListHeaders.cmake  colloConfig.cmake.in
collo/: collocation-blaze.hpp  collocation.hpp  gauss.hpp  lobatto.hpp
examples/: CMakeLists.txt
examples/isochrone/: CMakeLists.txt  isochrone.cpp
examples/kepler/: CMakeLists.txt  kepler.cpp
examples/lotka-volterra/: CMakeLists.txt  lotka-volterra.cpp
include/astro/: base.hpp  kepler.hpp
include/collo/: collocation.hpp  gauss.hpp  lobatto.hpp
include/lace/: matrix.hpp  vector.hpp
include/numm/: base.hpp  legendre.hpp  numm.hpp  roots.hpp
lace/: matrix.hpp  vector.hpp
numm/: base.hpp  legendre.hpp  numm.hpp  roots.hpp
tests/: CMakeLists.txt
tests/astro/: CMakeLists.txt  astro-base.cpp  base.cpp  kepler.cpp
tests/collo/: CMakeLists.txt  collo-collocation.cpp  collo-gauss.cpp  collo-lobatto.cpp  collocation.cpp
tests/lace/: CMakeLists.txt  lace-vector.cpp  matrix.cpp  vector.cpp
tests/numm/: CMakeLists.txt  base.cpp  legendre.cpp  numm-base.cpp  numm-legendre.cpp  numm-roots.cpp  roots.cpp
